tests/snapshots/lib__snapshots__simple_report@invalid-regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate::target=warn/[[]"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidRegex

  ⚠ invalid regex specified
   ╭────
 1 │ crate::target=warn/[[]
   ·                    ─┬─
   ·                     ╰── regex parse error:
    [[]
     ^^
error: unclosed character class
   ╰────

